#Generic CMakeLists file for compiling an example program.
GET_FILENAME_COMPONENT( EXAMPLE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME )

FILE( GLOB EXAMPLE_SRCS *.cpp )
SET_SOURCE_FILES_PROPERTIES(
    ${EXAMPLE_SRCS} PROPERTIES COMPILE_FLAGS "${GNE_COMMON_FLAGS}" )

ADD_EXECUTABLE( ${EXAMPLE_NAME} ${EXAMPLE_SRCS} )
SET_TARGET_PROPERTIES(
    ${EXAMPLE_NAME} PROPERTIES LINK_FLAGS "${GNE_LINKER_FLAGS}" )
ADD_DEPENDENCIES( ${EXAMPLE_NAME} gnelib )
TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} gnelib )

INSTALL_TARGETS( /share/${GNE_PACKAGE_NAME}/examples ${EXAMPLE_NAME} )
